# OZ_NSW

./: Ch03_task.ipynb
Admin_Project/: admin.css  admin.html  admin.js
CSS-1/: profile.css
CSS-2/: chat.html
CSS/CSS-1/: profile.html
CSS/CSS-2/: chat.css
DB/: chapter01_06.ipynb
DB/Day2/: chapter07_13.ipynb
DB/Day3/: DB_Day3.sql
DB/Day4/: Day4.sql  airbnb_dummy.py
Data_Analysis/: data_analysis_과제.ipynb
Django/: db.sqlite3  pyproject.toml
Django/config/: settings.py  urls.py
Django/feeds/: urls.py  views.py
Flask/: app.py
Flask/Day2/: api.py  app.py  schemas.py
Flask/psychological_test_completion/: db.sqlite  function.ipynb
Flask/templates/: index.html
HTML 1회차 과제/: profile.html
JavaScript 1회차 과제/: user.html
JavaScript 3회차 과제/: join.css
JavaScript-3/: join.html  join.js
Linux/: linux_0113(문제).ipynb  linux_1426.ipynb
Machine_Learning/: Machine_learning.ipynb
Python/: Ch01.task.ipynb  Ch09_task.ipynb  python04_challenge.ipynb
membership/: code.ipynb  db.sqlite3  orm.ipynb  pyproject.toml
membership/accounts/: __init__.py  admin.py  apps.py  models.py  views.py
membership/accounts/migrations/: 0001_initial.py  0002_alter_account_email.py
membership/addresses/: admin.py  models.py  serializer.py  urls.py  views.py
membership/addresses/migrations/: 0001_initial.py
membership/common/: models.py
membership/config/: asgi.py  settings.py  urls.py
membership/users/: admin.py  models.py  urls.py  views.py
membership/users/migrations/: 0001_initial.py  0002_user_phone_number.py
numpy_pandas/: pandas과제.ipynb
(+56 files in other folders)
