[tool.poetry]
name = "django_nsw"
version = "0.1.0"
description = "python django project"
authors = ["NohSungwoo <shtjddn0817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
